--- a/web/app/themes/skeletton/resources/assets/scss/style.scss
+++ b/web/app/themes/skeletton/resources/assets/scss/style.scss
@@ -1,5 +1,6 @@
-//@import "~open-color/open-color.scss";
+@import "~normalize.css/normalize.css";
+@import "~open-color/open-color.scss";
 
 body{
-  background-color: gray;
+  background-color: $oc-gray-1;
 }
