Added Support for post types Changed Wordpress version

--- a/web/app/themes/skeletton/resources/views/layouts/base.twig
+++ b/web/app/themes/skeletton/resources/views/layouts/base.twig
@@ -14,7 +14,7 @@
 <head>
 
     <!-- Title Tag -->
-    <title>{{ page.content.meta('seo_title') | default( site.title ) | eclipe }}</title>
+    <title>{{ page.content.meta('seo_title') | default( site.title ) | eclipse }}</title>
 
     <!-- Meta -->
     {% include '@c/meta.twig' %}
