Fixed Eclipse Filter name

--- a/web/app/themes/skeletton/resources/views/components/meta.twig
+++ b/web/app/themes/skeletton/resources/views/components/meta.twig
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type"     content="text/html; charset=UTF-8" />
 
 <!-- SEO -->
-<meta name="description"            content="{{ page.content.meta('seo_description') | default(site.description) | default('No Description available') | eclipe(150) }}">
+<meta name="description"            content="{{ page.content.meta('seo_description') | default(site.description) | default('No Description available') | eclipse(150) }}">
 
 <!-- Device -->
 <meta name="viewport"               content="width=device-width, initial-scale=1, viewport-fit=cover">
