Added Caching, Added Mix extract Added vendor.js to templates Added debug info

--- a/web/app/themes/skeletton/resources/views/components/debug.twig
+++ b/web/app/themes/skeletton/resources/views/components/debug.twig
@@ -2,6 +2,7 @@
 <script>
     console.log('Debug Mode!');
     console.log({{ _context | json_encode | raw }});
+    console.log({{ debug | json_encode | raw }});
 </script>
 
 
