--- a/web/app/themes/skeletton/resources/views/layouts/base.twig
+++ b/web/app/themes/skeletton/resources/views/layouts/base.twig
@@ -76,6 +76,11 @@
 
     {# Additionl scripts #}
     {% block script %}
+        <!-- Vendor Files -->
+        <script src="{{ 'manifest.js' | mix }}" type="application/javascript"></script>
+        <script src="{{ 'vendor.js' | mix }}"   type="application/javascript"></script>
+
+        <!-- Script file! -->
         <script type="application/javascript" src="{{ 'script.js' | mix }}"></script>
     {% endblock %}
 
