--- a/web/app/themes/skeletton/resources/views/pages/page.twig
+++ b/web/app/themes/skeletton/resources/views/pages/page.twig
@@ -3,6 +3,8 @@
 {% block content %}
     <hr>
 
+    <div id="app"></div>
+
         {% for post in page.posts %}
 
             <article id="post-{{ post.id }}" class="{{ post.class | join(' ') }}">
